--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,7 @@ body > main{
     text-align: center;
     background-color: hsl(0, 0%, 100%);
     border-radius:20px;
-    box-shadow:20px 0 28px hsla(0, 0%, 0%, 5%);
+    box-shadow:0 20px 20px hsla(0, 0%, 0%, 5%);
 }
 .card > *{
     padding:0;
