--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,31 @@
 html,body{
     margin:0;padding:0;
     font-size: 16px;
+    font-family: "Epilogue", sans-serif;
+    background-color: hsl(0, 0%, 98%);
+}
+
+body{
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+body>*:not(:first-child){
+    margin-top:50px;
+}
+body>*:last-child{
+    margin-top: auto;
 }
 nav{
     width:100%;
     height:60px;
-    overflow: hidden;
+    margin-top:20px;
 }
 nav > .nav-container{
     width:calc(100% - 40px);
+    max-width:1320px;
     height: 100%;
     margin:0 auto;
     display: flex;
@@ -16,12 +33,27 @@ nav > .nav-container{
     align-items: center;
     justify-content: space-between;
 }
+nav a,
+nav a:active,
+nav a:visited{
+    text-decoration: none;
+}
 nav > .nav-container > *:last-child{
     margin-left:auto;
 }
+nav > .nav-container > .logo{
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    margin-right:80px;
+}
+nav > .nav-container > .logo > img{
+    height: 27px;
+}
 nav > .nav-container > .nav-list{
     height: 100%;
-    margin-left:30px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -29,19 +61,146 @@ nav > .nav-container > .nav-list{
 }
 nav > .nav-container > .nav-list > *{
     display: inline-block;
-    margin-right:30px;
+    margin-right:40px;
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color:hsl(0, 0%, 41%);
 }
-nav .dropdown.closed > .drop-menu{
-    display: none;
+nav > .nav-container > .nav-list > *:hover,
+nav .dropdown:hover{
+    color:hsl(0, 0%, 8%);
+}
+nav .dropdown{
+    position: relative;
+}
+nav .dropdown::after{
+    content:'';
+    display: block;
+    width:20px;height: 20px;
+    background-image: url(../images/icon-arrow-down.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-left:4px;
+    transform: rotate(0deg);
+    transition: .1s ease-in;
+}
+nav .dropdown:hover::after{
+    transform: rotate(180deg);
+    transition: .2s ease-in;
+}
+nav .dropdown > .drop-menu{
+    display: block;
+    position: absolute;
+    top:-100vh;
+    left: 0;
+    padding: 16px 0;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 10px;
+    box-shadow: 0 4px 28px rgba(0, 0, 0, .1);
+    transform: translateY(-20px);
+    opacity:0;
+    transition: opacity .3s,top 0s .3s,transform .3s;
+}
+nav .dropdown:first-of-type > .drop-menu{
+    left:unset;
+    right: 0;
+}
+nav .dropdown:hover > .drop-menu{
+    top:100%;
+    transform: translateY(0px);
+    opacity:1;
+    transition: opacity .1s,top 0s,transform .2s;
+}
+nav .dropdown > .drop-menu > *{
+    height:40px;
+    padding: 0 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    cursor: pointer;
+    white-space: nowrap;
+    flex-wrap: nowrap;
+    line-height: 100%;
+    color:hsl(0, 0%, 41%);
+}
+nav .dropdown > .drop-menu > *:hover{
+    background-color: rgba(0, 0, 0, .02);
+    color:hsl(0, 0%, 8%);
+}
+nav .dropdown > .drop-menu > *>img{
+    margin-right:14px;
+    margin-top:-3px;
+}
+nav .user-nav-list > *{
+    color:hsl(0, 0%, 41%);
+}
+nav .user-nav-list > *:hover{
+    color:hsl(0, 0%, 8%);
+}
+nav .user-nav-list .login{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+    height:40px;
+}
+nav .user-nav-list .register{
+    padding:0 20px;
+    height:40px;
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 14px;
+}
+.container{
+    width:calc(100% - 40px);
+    margin:0 auto;
+}
+.hero > .container > div{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    outline: 1px solid;
+}
+.hero > .container > div > div{
+    max-width:calc(50% - 40px);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    outline: 1px solid;
+}
+.hero > .container > div > div > *{
+    margin:20px 0;
+}
+.hero > .container > div > div > h1{
+    font-size: 3.6rem;
+    display: inline-block;
+    max-width:11ch;
+}
+@media (min-width:1440px){
+    .hero > .container > div > div > h1{
+        font-size: 6rem;
+    }
+}
+.hero > .container > div > img{
+    max-width:calc(50% - 40px);
 }
 .only-desktop{
     display: none !important;
 }
-@media (min-width:600px){
+@media (min-width:900px){
     .only-mobile{
         display: none !important;
     }
     .only-desktop{
-        display: unset !important;
+        display: flex !important;
     }
 }
